<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Purpose">


    <TextView
        android:id="@+id/purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/purpose" />

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="177dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/carry1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToChoice"
            android:text="@string/carry1" />

        <Button
            android:id="@+id/carry2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToChoice"
            android:text="@string/carry2" />

        <Button
            android:id="@+id/work3"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:onClick="goToChoice"
            android:text="@string/work3" />
    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:onClick="exit"
        android:text="@string/exit" />
</RelativeLayout>